# replications

./: BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  osap_validation.json  pyproject.toml  results.json
docs/: candidates.md
history/: leaderboard.jsonl
notebooks/: amihud_illiquidity.ipynb  ang_idiosyncratic_volatility.ipynb  asness_moskowitz_pedersen_asset_momentum.ipynb  bali_cakici_whitelaw_max.ipynb  basu_earnings_yield.ipynb  cooper_gulen_schill_investment.ipynb  debondt_thaler_long_term_reversal.ipynb  fama_french_hml.ipynb  fama_french_op_profitability.ipynb  fama_french_smb.ipynb  frazzini_pedersen_bab.ipynb  gatev_pairs_trading.ipynb  george_hwang_52week_high.ipynb  jegadeesh_short_term_reversal.ipynb  jegadeesh_titman_momentum.ipynb  lakonishok_cashflow_yield.ipynb  litzenberger_ramaswamy_dividend_yield.ipynb  moskowitz_grinblatt_industry_momentum.ipynb  moskowitz_ooi_pedersen_trend.ipynb  novy_marx_profitability.ipynb  pontiff_woodgate_issuance.ipynb  sloan_accruals.ipynb
references/: ang_idiosyncratic_volatility.json  basu_earnings_yield.json  cooper_gulen_schill_investment.json  debondt_thaler_long_term_reversal.json  fama_french_hml.json  fama_french_op_profitability.json  fama_french_smb.json  frazzini_pedersen_bab.json  jegadeesh_short_term_reversal.json  jegadeesh_titman_momentum.json  lakonishok_cashflow_yield.json  litzenberger_ramaswamy_dividend_yield.json  moskowitz_grinblatt_industry_momentum.json  moskowitz_ooi_pedersen_trend.json  novy_marx_profitability.json  pontiff_woodgate_issuance.json  sloan_accruals.json
replications/: __init__.py  (+5 more)
(+33 files in other folders)
